# rocm-examples

./: .gitignore  .gitlab-ci.yml  CMakePresets.json  README.md  ROCm-Examples-VS2017.sln  ROCm-Examples-VS2019.sln  ROCm-Examples-VS2022.sln  vcpkg.json
.devcontainer/Linux-ROCm/: devcontainer.json  hip-libraries-cuda-ubuntu.Dockerfile  hip-libraries-rocm-ubuntu-ci.Dockerfile  hip-libraries-rocm-ubuntu.Dockerfile
Applications/histogram/: .gitignore
Dockerfiles/: hip-libraries-cuda-ubuntu-ci.Dockerfile  hip-libraries-rocm-ubuntu-ci.Dockerfile  hip-libraries-rocm-ubuntu.Dockerfile
HIP-Basic/: CMakeLists.txt
HIP-Basic/device_query/: main.cpp
HIP-Basic/hello_world/: hello_world_vs2017.vcxproj
HIP-Basic/hello_world_cuda/: CMakeLists.txt  main.hip
HIP-Basic/opengl_interop/: nvidia_hip_fix.hpp  opengl_interop_vs2017.vcxproj  opengl_interop_vs2019.vcxproj  opengl_interop_vs2022.vcxproj
HIP-Basic/runtime_compilation/: CMakeLists.txt
HIP-Basic/vulkan_interop/: vulkan_interop_vs2017.vcxproj  vulkan_interop_vs2019.vcxproj  vulkan_interop_vs2022.vcxproj
Libraries/: Makefile
Libraries/rocRAND/simple_distributions_cpp/: simple_distributions_cpp_vs2017.vcxproj  simple_distributions_cpp_vs2019.vcxproj  simple_distributions_cpp_vs2022.vcxproj
Libraries/rocSPARSE/level_2/: Makefile
Libraries/rocSPARSE/level_2/bsrsv/: README.md  main.cpp
Libraries/rocSPARSE/level_2/spitsv/: main.cpp
Libraries/rocSPARSE/level_2/spsv/: README.md  main.cpp
Libraries/rocSPARSE/level_3/: Makefile
Libraries/rocSPARSE/level_3/bsrmm/: README.md  main.cpp
Libraries/rocSPARSE/preconditioner/csritilu0/: main.cpp
Tutorials/Reduction/: CMakeLists.txt  README.md
Tutorials/Reduction/benchmarks/: CMakeLists.txt  bench_utils.hpp  v0.hip  v1.hip  v10.hip  v2.hip  v3.hip  v4.hip  v5.hip  v6.hip  v7.hip  v8.hip  v9.hip
Tutorials/Reduction/examples/: CMakeLists.txt  v1.hip  v2.hip  v3.hip  v4.hip  v5.hip  v6.hip  v7.hip  v8.hip  v9.hip
Tutorials/Reduction/include/: hip_utils.hpp  tmp_utils.hpp
Tutorials/Reduction/include/Reduction/: v0.hpp  v1.hpp  v10.hpp  v2.hpp  v3.hpp  v4.hpp  v5.hpp  v6.hpp  v7.hpp  v8.hpp  v9.hpp
Tutorials/Reduction/tests/: CMakeLists.txt  test_utils.hpp  v1.hip  v10.hip  v2.hip  v3.hip  v4.hip  v5.hip  v6.hip  v7.hip  v8.hip  v9.hip
